# Matrix-Script

./: CMakeLists.txt
Matrix Script/: AppDelegate.swift  Info.plist  Matrix Script-Bridging-Header.h  Matrix Script.swift  README  ViewController.swift  docs.html  entry.cpp  entry.hpp  error.cpp  error.hpp  expression.cpp  expression.hpp  function.cpp  function.hpp  license.html  main_calculator.cpp  main_calculator.hpp  main_calculator_c.cpp  main_calculator_c.hpp  matrix.cpp  matrix.hpp  number.cpp  number.hpp  style.css  token.cpp  token.hpp
Matrix Script CLI/: main.cpp
Matrix Script Java/: MainFrame.java  MatrixScript.cpp  MatrixScript.h  MatrixScript.java
Matrix Script Test/: Matrix_Script_Test.swift
Matrix Script.xcodeproj/: project.pbxproj
Matrix Script.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Matrix Script.xcodeproj/xcuserdata/tony.xcuserdatad/xcschemes/: xcschememanagement.plist
Matrix Script/Assets.xcassets/AppIcon.appiconset/: Contents.json
Matrix Script/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
